test/samples/invalid/tc/trans_call.maruir
fun add(a: u8, b: u8): u8
locals res: u8;
{
    entry:
        res := a + b;
        return res;
}

fun mod(a: i16): i16 {
    entry:
        branch a < 0_i16 negative non_negative;

    negative:
        a := -a;
        jump non_negative;

    non_negative:
        return a;
}

fun gauss(n: i32): i32
locals ctr: i32, sum: i32;
{
    entry:
        ctr := 0_i32;
        sum := 0_i32;
        jump header;

    header:
        branch ctr < n body exit;

    body:
        ctr := ctr + 1_i32;
        sum := sum + ctr;
        jump header;

    exit:
        return sum;
    
}

fun noop() {}

fun main()
locals a: u8, b: i16, c: i32, failed: bool;
{
    entry:
    a := trans_call add(1_u8, 2_u8);
    b := trans_call mod(-10_i16);
    c := trans_call gauss(100_i32);
    call noop();
    return;
}
